rooloking de l'interface

--- a/public/index.html
+++ b/public/index.html
@@ -7,7 +7,7 @@
   <link rel="stylesheet" href="./style.css" />
 </head>
 <body>
-  <button id="toggle-btn">☰ Menu</button>
+  <button id="toggle-btn">☰</button>
   <div class="app">
     <aside class="sidebar" id="sidebar">
       <h2>Mentora</h2>
