suppression du champs niveau et changement d'iA

--- a/public/index.html
+++ b/public/index.html
@@ -25,11 +25,11 @@
           onkeypress="handleKeyPress(event)"
           autocomplete="off"
         />
-        <select id="niveau">
+        <!-- <select id="niveau">
           <option value="débutant">Débutant</option>
           <option value="intermédiaire">Intermédiaire</option>
           <option value="avancé">Avancé</option>
-        </select>
+        </select> -->
         <button onclick="sendMessage()">Envoyer</button>
       </div>
     </main>
