ajout de scroll auto

--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
     </aside>
     <main class="main">
       <div class="chat-header">Assistant IA d'apprentissage</div>
-      <div class="chat-box" id="chatBox"></div>
+      <div class="chat-box empty" id="chatBox"></div>
       <div class="chat-input">
         <input
           type="text"
